--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ argcomplete = ">=0.8.0,<2.0"
 mbed_test_wrapper = ">=0.0.3,<2.0.0"
 intelhex = ">=2.0,<3.0"
 jsonpointer = ">=1.9,<2.0"
-markupsafe = "^2.1.3"
+markupsafe = "<2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
